# rkn-checker-tui

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
rkn_tui/: __main__.py  app.py  diagnostics.py  engine.py  presets.py  reports.py  snapshots.py  storage.py  styles.tcss  url_utils.py  verdicts.py  vpn_check.py
rkn_tui/screens/: adhoc.py  diff.py  history.py  main_menu.py  report.py  results.py  save_snapshot.py  scanning.py  settings.py  splash.py  verdict_detail.py
tests/: test_adhoc.py  test_diagnostics.py  test_engine.py  test_history_diff.py  test_presets.py  test_reports.py  test_screens.py  test_settings_parse.py  test_snapshots.py  test_storage.py  test_verdicts.py  test_vpn_check.py
